# rust-axum-sqlx-hex

./: .env.example  Cargo.toml  README.md  database.db
.sqlx/: query-5b3225a7045a096ed689159039702887877d8dff52f30121d698800f82e181f3.json  query-60ef7b7f6f2f4645434bdff051a853375873cbbe900bfbcdc5f9bd5cf62a40c0.json  query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json  query-6b44edc717a608ef01a584147d12ffab66e6a8a3a7d19b51c2ab6f9ae4aab30b.json
migrations/: 20240426000000_init.sql
src/: config.rs  main.rs
src/adapters/: mod.rs
src/adapters/api/: mod.rs  organization_api.rs  user_api.rs
src/adapters/repositories/: mod.rs  organization_repository.rs  user_repository.rs
src/api/: factory.rs  mod.rs
src/api/dtos/: mod.rs  user.rs
src/api/handlers/: user.rs
src/api/middleware/: mod.rs
src/application/: mod.rs
src/application/services/: mod.rs  organization_service.rs  user.rs  user_service.rs
src/domain/: mod.rs  organization.rs  organization_repository.rs  organization_service.rs  user.rs  user_repository.rs  user_service.rs
src/domain/entities/: mod.rs  user.rs
src/infrastructure/: database.rs  mod.rs
src/infrastructure/database/: postgres.rs
src/infrastructure/persistence/: user.rs
