
[package]
name = "rust-axum-sqlx-hex"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.6"
clap = { version = "4.5.51", features = ["derive", "env"] }
dotenvy = "0.15.7"
serde = "1.0.228"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.48.0", features = ["full"] }
